@@ -4,15 +4,15 @@ declare-option -hidden str pluggo_bin '{{.PluggoBin}}'
 hook -group pluggo global RegisterModified '"' %{
     set-option global pluggo_last_yank_client %val{client}
     evaluate-commands %sh{
-        "$kak_opt_pluggo_bin" command cmd.put.clipboard "$kak_main_reg_dquote"
+        NATS_TOKEN='{{.Nats.Token}}' "$kak_opt_pluggo_bin" command cmd.put.clipboard "$kak_main_reg_dquote"
     }
 }
 
 evaluate-commands %sh{
-    "$kak_opt_pluggo_bin" daemon "$kak_session" </dev/null >/dev/null 2>&1 &
+    NATS_TOKEN='{{.Nats.Token}}' "$kak_opt_pluggo_bin" daemon "$kak_session" </dev/null >/dev/null 2>&1 &
     daemon_pid=$!
     printf 'declare-option -hidden str pluggo_daemon_pid "%s"\n' "$daemon_pid"
-    "$kak_opt_pluggo_bin" event "event.logged.kakoune-pluggo.info" "pid for session $kak_session is $daemon_pid"
+    NATS_TOKEN='{{.Nats.Token}}' "$kak_opt_pluggo_bin" event "event.logged.kakoune-pluggo.info" "pid for session $kak_session is $daemon_pid"
 }
 
 hook -group pluggo global KakEnd .* %{
@@ -26,9 +26,9 @@ define-command \
     pluggo-clip %{
     evaluate-commands -try-client %opt{pluggo_last_yank_client} %{
         evaluate-commands %sh{
-    "$kak_opt_pluggo_bin" event 'event.logged.kakoune-pluggo.debug' "setting from '$kak_main_reg_dquote' to '$1'" 2>/dev/null
+            NATS_TOKEN='{{.Nats.Token}}' "$kak_opt_pluggo_bin" event 'event.logged.kakoune-pluggo.debug' "setting from '$kak_main_reg_dquote' to '$1'" 2>/dev/null
             if [ "$1" = "$kak_main_reg_dquote" ]; then
-                "$kak_opt_pluggo_bin" event 'event.logged.kakoune-pluggo.debug' "skipping update" 2>/dev/null
+                NATS_TOKEN='{{.Nats.Token}}' "$kak_opt_pluggo_bin" event 'event.logged.kakoune-pluggo.debug' "skipping update" 2>/dev/null
                 exit 0
             fi
             printf "set-register dquote '"
